Mon deuxieme commit Reservia
V2 strucure blocs section 26052021

--- a/index.html
+++ b/index.html
@@ -5,9 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Reservia</title>
 </head>
 <body>
-    
+    <!--DEBUT HEADER-->
+    <section class="header">
+        <div class="header_navbar">
+            <div class="header_navbar_logo">
+                <h1 class="header_navbar_logo_title"><img src="file:///C:/Users/souda/PROJET%20P2%20SOUDANI%20AMAR/img/images/logo/Reservia.svg" alt="Reservia Hotel"></h1>
+            </div>
+            <div class="header_navbar_menu">
+                <a href="#" class="header_navbar_menu_lien">Hébergements</a>
+                <a href="#" class="header_navbar_menu_lien">Activités</a>
+                <a href="#" class="header_navbar_menu_lien">S'inscrire</a>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
+
+
+
+    <!--HEADER FIN-->
+
+    <!--CONTENUE DEBUT-->
+    <section class="contenu">
+        <div class="recherche">
+
+        </div>
+        <div class="filtres">
+
+        </div>
+        <div class="articles">
+
+
+        </div>
+        <div class="navbar">
+
+            
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+
+
+    <!--CONTENUE FIN-->
+
+    <!--FOOTER DEBUT-->
+
+    <section class="footer">
+        <div class="footer_apropos">
+            <h3 class="title">A propos</h3>
+            <ul>
+                <li>Fontionnement du site</li>
+                <li>Conditions générales de vente</li>
+                <li>Données et confidentialité</li>
+            </ul>
+        </div>
+
+        <div class="footer_noshebergements">
+            <h3 class="title">Nos hébergements</h3>
+            <ul>
+                <li>Charte de qualité</li>
+                <li>Soumettre votre hotel</li>
+            </ul>
+        </div>
+
+        <div class="footer_assistance">
+            <h3 class="title">Assistance</h3>
+            <ul>
+                <li>Centre d'aide</li>
+                <li>Nous contacter</li>
+            </ul>
+        </div>
+
+
+
+    </section>
+
+    <!--FOOTER FIN-->
 </body>
 </html>
