--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--HEADER FIN-->
 
     <!--CONTENUE DEBUT-->
-    <section class="contenu">
+    <section class="contenu1">
         <div class="recherche">
 
         </div>
@@ -51,13 +51,13 @@
         </div>
 
 
+    </section>
 
+    <section class="contenu2">
+        <div class="activités">
 
-
-
-
-
-
+        </div>
+        
 
 
 
