--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Reservia</title>
 </head>
@@ -14,12 +14,12 @@
     <section class="header">
         <div class="header_navbar">
             <div class="header_navbar_logo">
-                <h1 class="header_navbar_logo_title"><img src="file:///C:/Users/souda/PROJET%20P2%20SOUDANI%20AMAR/img/images/logo/Reservia.svg" alt="Reservia Hotel"></h1>
+                <h1 class="header_navbar_logo_title"><img src="file:///C:/Users/souda/PROJETP2SOUDANIAMAR/img/images/logo/Reservia.svg" alt="Reservia Hotel"></h1>
             </div>
             <div class="header_navbar_menu">
-                <a href="#" class="header_navbar_menu_lien">Hébergements</a>
-                <a href="#" class="header_navbar_menu_lien">Activités</a>
-                <a href="#" class="header_navbar_menu_lien">S'inscrire</a>
+                <a href="#" class="header_navbar_link">Hébergements</a>
+                <a href="#" class="header_navbar_link">Activités</a>
+                <a href="#" class="header_navbar_link">S'inscrire</a>
 
             </div>
 
@@ -34,11 +34,11 @@
     <!--HEADER FIN-->
 
     <!--CONTENUE DEBUT-->
-    <section class="contenu1">
-        <div class="recherche">
+    <section class="content-header">
+        <div class="research">
 
         </div>
-        <div class="filtres">
+        <div class="filters">
 
         </div>
         <div class="articles">
@@ -53,8 +53,25 @@
 
     </section>
 
-    <section class="contenu2">
-        <div class="activités">
+    <section class="content-accomodation">
+        <div class="accommodation" >
+
+        </div>
+
+
+    </section>
+
+    <section class="content-popular">
+        <div class="popular" >
+
+        </div>
+
+
+    </section>
+
+
+    <section class="content-activity">
+        <div class="activity">
 
         </div>
         
