--- a/index.html
+++ b/index.html
@@ -59,55 +59,136 @@
         <div class="content">
             
             <div class="accommodation">
-                <h2 class="hebergement_marseille">Hébergements à Marseille</h2>
+                <h2 class="title_popular">Hébergements à Marseille</h2>
                     <div class="accommodation_card">
                         <img class="accommodation_card_image" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                             alt="Hotel">
                         <h4>Auberge la Cannebière</h4>
+                        <div class="hotel_name_star">
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="far fa-star" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div class="accommodation_card">
                         <img class="accommodation_card_image" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                             alt="Hotel">
+                            <h4>Hôtel du port</h4>
+                            <div class="hotel_name_star">
+                                <i class="fas fa-star" aria-hidden="true"></i>
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="far fa-star" aria-hidden="true"></i>
+                            </div>
                     </div>
                     <div class="accommodation_card">
                         <img class="accommodation_card_image" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                             alt="Hotel">
+                            <h4>Hôtel Les mouettes</h4>
+                            <div class="hotel_name_star">
+                                <i class="fas fa-star" aria-hidden="true"></i>
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="far fa-star" aria-hidden="true"></i>
+                            </div>
                     </div>
                     <div class="accommodation_card">
                         <img class="accommodation_card_image_4" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                             alt="Hotel">
+                            <h4>Hôtel de la mer</h4>
+                            <div class="hotel_name_star">
+                                <i class="fas fa-star" aria-hidden="true"></i>
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="far fa-star" aria-hidden="true"></i>
+                            </div>
                     </div>
                     <div class="accommodation_card">
                         <img class="accommodation_card_image_5" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                             alt="Hotel">
+                            <h4>Auberge Le Panier</h4>
+                            <div class="hotel_name_star">
+                                <i class="fas fa-star" aria-hidden="true"></i>
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="far fa-star" aria-hidden="true"></i>
+                            </div>
                     </div>
                     <div class="accommodation_card">
                         <img class="accommodation_card_image_6" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                             alt="Hotel">
+                            <h4>Hôtel chez Amina</h4>
+                            <div class="hotel_name_star">
+                                <i class="fas fa-star" aria-hidden="true"></i>
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="fas fa-star" aria-hidden="true"></i> 
+                                <i class="far fa-star" aria-hidden="true"></i>
+                            </div>
                     </div>
             </div>
             <aside class="popular">
-                <h2>Les plus populaires</h2>
+                <h2 class="title_popular">Les plus populaires</h2>
                 <div class="nav">
-                    <div><img
-                            src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                            alt="Hotel"></div>
-                    <div><img
-                            src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                            alt="Hotel"></div>
-                    <div><img
-                            src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                            alt="Hotel"></div>
-                </div>
+                    <div class="popular_card">
+                        <img class="popular_card_img_1" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hotel">
+                        <div class="hotel_name_text">
+                            <span class="hotel_name"> Hotel Le soleil du matin</span>
+                            <p>Nuit à partir de 128€</p>
+                        <div class="hotel_name_star">
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i>   
+                        </div>
+                        </div>
+                    </div>
+                    <div class="popular_card">
+                        <img class="popular_card_img_2" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Hotel">
+                        <div class="hotel_name_text">
+                            <span class="hotel_name"> Au coeur de l'eau Chambres d'hôtes</span>
+                            <p>Nuit à partir de 71€</p>
+                        <div class="hotel_name_star">
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="far fa-star" aria-hidden="true"></i>   
+                        </div>
+                        </div>
+                    </div>
+                    <div class="popular_card_3">
+                        <img class="popular_card_img_3" src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hotel">
+                        <div class="hotel_name_text">
+                            <span class="hotel_name"> Hotel Tout bleu et Blanc</span>
+                            <p>Nuit à partir de 68€</p>
+                        <div class="hotel_name_star">
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="fas fa-star" aria-hidden="true"></i> 
+                            <i class="far fa-star" aria-hidden="true"></i>
+                        </div>
+                        </div>
+                    </div>
             </aside>
         </div>
         </div>
         <div class="activity">
             <div>
                 <h2>Activités à Marseille</h2>
-                <img src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                <img src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                     alt="Hotel">
-                <img src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                <img src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                    alt="Hotel">
+                <img src="C:/Users/souda/PROJET_P2_SOUDANI_AMAR/img/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                     alt="Hotel">
             </div>
         </div>
